components/nautobot/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nautobot
  labels:
    app.kubernetes.io/name: nautobot
    app.kubernetes.io/instance: nautobot
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nautobot.146-20-65-8.sslip.io`)
      priority: 10
      services:
        - name: nautobot-default
          port: 80
  tls:
    certResolver: letsencrypt
